<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="myData"
            type="com.example.pneumoniaapp.MyData" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".MainActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/doctor"
            android:layout_width="163dp"
            android:layout_height="133dp"
            android:background="#00E91E63"
            android:paddingTop="10dp"
            android:src="@drawable/doctor"
            app:civ_border_color="#673AB7"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.438"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.027" />

        <TextView
            android:id="@+id/did_you_know"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@={myData.did_you_know}"
            android:textColor="#E91E63"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctor" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="casual"
            android:text="@={myData.info}"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/did_you_know" />

        <Button
            android:id="@+id/about_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#03A9F4"
            android:text="@string/about_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/signs_btn"
            app:layout_constraintEnd_toStartOf="@+id/signs_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/signs_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFEB3B"
            android:text="@string/signs_btn"
            app:layout_constraintEnd_toStartOf="@+id/prev_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/about_btn"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <Button
            android:id="@+id/prev_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:text="@string/prev_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/signs_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/signs_btn" />

        <TextView
            android:id="@+id/about_text"
            style="@style/GreyBox"
            android:layout_width="100dp"
            android:layout_height="243dp"
            android:text="@string/about_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/signs_text"
            app:layout_constraintEnd_toStartOf="@+id/signs_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signs_text"
            style="@style/GreyBox"
            android:layout_width="125dp"
            android:layout_height="176dp"
            android:layout_marginTop="16dp"
            android:text="@string/signsText"
            app:layout_constraintEnd_toStartOf="@+id/prev_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/about_text"
            app:layout_constraintTop_toBottomOf="@+id/signs_btn" />

        <TextView
            android:id="@+id/prev_text"
            style="@style/GreyBox"
            android:layout_width="95dp"
            android:layout_height="268dp"
            android:text="@string/prevText"
            app:layout_constraintBaseline_toBaselineOf="@+id/signs_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/signs_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>